--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 :root{
     --bg-color: #e5e7eb;
@@ -6,6 +7,8 @@
 }
 
 body{
+    width: 100vw;
+    height: 100vh;
     padding: 0;
     margin: 0;
     background-color: var(--bg-color);
@@ -39,7 +42,65 @@ button{
 
 .game-container{
     display: none;
-    background-color: red;
+    flex-direction: column;
     min-width: 100%;
     min-height: 100%;
+    font-family: var(--font-style);
 }
+
+.header{
+    text-align: center;
+    font-size: 5rem;
+}
+
+.content{
+    display: flex;
+    justify-content: space-around;
+    gap: 0;
+}
+
+.board{
+    display: grid;
+    min-width: 35rem;
+    height: 80vh;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: .5rem;
+}
+
+.space{
+    border-radius: 5%;
+    background-color: #d1d5db;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 10rem;
+    font-family: 'Lato';
+}
+
+.player{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    min-width: 20rem;
+    font-size: 3rem;
+}
+
+.first{
+    background-color: #93c5fd;
+    border: 2px solid #3b82f6;
+    border-left: 2rem solid transparent;
+    border-right: 2rem solid transparent;
+    border-radius: 5%;
+}
+
+.second{
+    background-color: #fca5a5;
+    border: 2px solid #ef4444;
+    border-left: 2rem solid transparent;
+    border-right: 2rem solid transparent;
+    border-radius: 5%;
+}
+
